@@ -1,7 +1,6 @@
 Очень желательно
 ================
 
-- Обновлять тэги из файла перед проигрыванием.
 - Научить ardj replaygain scan проверять наличие mp3gain.
 - Научить jabber обрабатывать типовые ошибки подключения, вроде not-authorized (не тот пароль)
 - Научить обработчики команд из ardj.console возвращать несколько сообщений,
