@@ -1,5 +1,7 @@
-2014/07/07 (1.2.27)
+2014/07/07 (1.2.28)
 - Added templates for token verification emails.
+- Refresh tags from file before playing.
+- Write tags to file on change.
 
 2014/07/06 (1.2.26)
 - New WebAPI endpoint: /skip (POST).
